css/style.css
html,body{
    height:100%;    
    margin:0;
    padding:0;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
}

.text {
  text-align: center;
  color: black;
  overflow: auto;
  font-family: 'Playfair Display', serif;
  font-size: 150%;
}

@media only screen and (max-width: 600px) {
  .adaptwidth {
    width: 90%;
  }
}

@media only screen and (min-width: 600px) {
  .adaptwidth {
    width: 50%;
  }
}

.smalllogofont {
    font-family: 'Oswald', sans-serif;
    font-size: 200%;
}

.logofont {
    font-family: 'Oswald', sans-serif;
    font-size: 300%;
}

a {
    text-decoration: underline;
    color: black;
}

.whitetext {
  text-align: center;
  color: white;
  overflow: auto;
  font-family: 'Playfair Display', serif;
  font-size: 150%;
}

.whitetext a {
    color: white;
}

